--- a/travelRecommendation/travel.css
+++ b/travelRecommendation/travel.css
@@ -3,11 +3,16 @@ header{
     
 }
 
+body{
+    background-color: yellow;
+    background-repeat: none;
+}
+
 .navbar{
     background-color: green;
     display: flex;
     list-style: none;
-    width:fit-content; 
+    width:75%; 
 }
 
 .navbar li{
@@ -22,7 +27,7 @@ header{
     background-color: aliceblue;
     color: black;
     float: left;
-    margin: 5px;
+    margin-top: 20px;
 
 }
 
@@ -53,4 +58,45 @@ header{
     padding: 5px 5px;
     cursor: pointer;
     border-radius: 10px;
+}
+
+/* section */
+.intro{
+    display: flex;
+}
+
+/* social bar */
+.sideSocial{
+    background-color: none;
+    width:20%;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+}
+
+.sideSocial-fb{
+    width: 50px;
+    height:10%;
+    background-color: blue;
+    background-image: url();
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.mainTitle{
+    background-color: red;
+    display: block;
+    width:200px;
+    height: fit-content;
+}
+.mainTitle h1{
+    font-size: 50px;
+}
+
+.subTitle{
+    width: 500px;
+    display: flex;
+    background-color: aqua;
+    padding-left: 20%;
+    height: 250px;
 }
