--- a/travelRecommendation/travel.css
+++ b/travelRecommendation/travel.css
@@ -67,16 +67,19 @@ body{
 
 /* social bar */
 .sideSocial{
-    background-color: none;
-    width:20%;
-    height: 300px;
+    background-color: orange;
+    width:120px;
+    height: 120px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    flex-direction: column;
+
 }
 
 .sideSocial-fb{
     width: 50px;
-    height:10%;
+    height:30px;
     background-color: blue;
     background-image: url();
     background-repeat: no-repeat;
@@ -88,6 +91,8 @@ body{
     display: block;
     width:200px;
     height: fit-content;
+    position: relative;
+    left: 80px;
 }
 .mainTitle h1{
     font-size: 50px;
@@ -97,6 +102,7 @@ body{
     width: 500px;
     display: flex;
     background-color: aqua;
-    padding-left: 20%;
+    position: relative;
+    left: 200px;
     height: 250px;
 }
