--- a/travelRecommendation/travel.css
+++ b/travelRecommendation/travel.css
@@ -2,38 +2,63 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
+/* Book Now */
+.bookNow{
+    width: 300px;
+    padding-left: 200px;
+    margin: 20px;
+    height: 100px;
+    align-content: center;
+}
+.bookNow button{
+    color: white;
+    background: black;
+    width: 135px;
+    height: 45px;
+    font-weight: bold;
+    font-size: 20px;
+    border-radius: 5px;
+}
+.bookNow button:hover{
+    transition-duration: 0.8s;
+    color:black;
+    background: white;
+    cursor: pointer;
+}
+
 
 header{
     display: flex;
     
 }
 
+/* main body */
 body{
-    background-color: yellow;
-    background-repeat: none;
+    background:url(./img/1431632.jpg);
+    background-size: cover;
 }
 
+
+
+/* Navbar */
 .navbar{
-    background-color: green;
     display: flex;
     list-style: none;
     width:500px; 
 }
 
 .navbar li{
-    background-color: rgb(255, 0, 0);
     margin: 15px;
     padding: 5px;
 }
 
 .navbar li a{
     text-decoration: none;
-    padding-right: 10px;
-    background-color: aliceblue;
     color: black;
     float: left;
     margin-top: 20px;
-
+    border-radius: 5px;
+    text-align: center;
 }
 
 .navbar li a:hover{
@@ -42,8 +67,9 @@ body{
     color: white;
 }
 
+/* searchbar */
+
 .searchBar{
-    background-color: blanchedalmond;
     display: flex;
     list-style-type: none;
     margin: 10px;
@@ -57,7 +83,7 @@ body{
     padding: 10px;
     margin: 10px;
     border-radius: 20px;
-    width:180px;
+    width: 210px;
 }
 
 .searchBar button{
@@ -67,6 +93,7 @@ body{
     padding: 5px 5px;
     cursor: pointer;
     border-radius: 10px;
+    text-align: center;
 }
 
 /* section */
@@ -76,7 +103,7 @@ body{
 
 /* social bar */
 .sideSocial{
-    background-color: orange;
+    background-color: rgb(98, 137, 245, 0.3);
     width:36px;
     height: 160px;
     display: flex;
@@ -119,7 +146,6 @@ body{
 
 
 .mainTitle{
-    background-color: red;
     display: block;
     width:300px;
     height: fit-content;
@@ -133,8 +159,14 @@ body{
 .subTitle{
     width: 500px;
     display: flex;
-    background-color: aqua;
+    background-color: rgba(0, 255, 255, 0.3);
+
     position: relative;
     left: 200px;
     height: 250px;
+}
+
+/* About Us */
+.aboutUs{
+    background-color: black;
 }
