--- a/travelRecommendation/travel.css
+++ b/travelRecommendation/travel.css
@@ -74,31 +74,35 @@ body{
     margin: 10px;
     border-radius: 20px;
     width: 350px;
-    position: relative;
-    left: 440px;
+    position: absolute;
+    right: 163px;
 }
 
-.navbar button{
-    background-color: black;
-    color: aliceblue;
-    margin: 10px 10px;
-    padding: 5px 5px;
-    cursor: pointer;
-    border-radius: 10px;
-    text-align: center;
-    position: relative;
-    top: 4px;
-    left: 310px;
+.navbar .btnBox{
     display: flex;
+    justify-content: space-between;
+    /* background-color: black; */
+    position: absolute;
+    right: 61px;
+    width: 200px;
+    top: 26px;
 }
 
-.results{
-    display: block;
+.navbar .btnBox button{
+    background-color: black;
+    color: white;
+    border-radius: 5px;
+    width: 60px;
+}
+
+
+#results{
     background-color: aqua;
     width: 360px;
     position: absolute;
     right: 185px;
     top: 75px;
+    display: none;
 }
 
 /* section */
