--- a/travelRecommendation/travel.css
+++ b/travelRecommendation/travel.css
@@ -29,7 +29,7 @@
 
 header{
     display: flex;
-    
+    background-color: darkseagreen;
 }
 
 /* main body */
@@ -188,12 +188,28 @@ body{
 /* contact us */
 .contactUs{
 
-    width: 500px;
+    width: 670px;
     display: flex;
-    background-color: rgba(0, 255, 255, 0.3);
-
-    position: relative;
+    flex-direction: column;
+    background-color: rgba(0, 255, 255, 0.4);
+    position: fixed;
     left: 675px;
-    height: 308px;
+    height: 570px;
     
+}
+.contactUs .contactInput{
+    background-color: rgba(225,255,255,0.1);
+}
+.contactUs .messageBox{
+    height: 200px;
+    background-color: rgba(225,255,255,0.1);
+}
+
+.contactUs button{
+    width: 100%;
+    height: 30px;
+    color: white;
+    background-color: darkseagreen;
+    font-size: 20px;
+    font-weight: bolder;
 }
