--- a/travelRecommendation/travel.css
+++ b/travelRecommendation/travel.css
@@ -103,7 +103,19 @@ body{
     right: 185px;
     top: 75px;
     display: none;
+    list-style: none;
 }
+
+#results .city-container img {
+    max-width: 100%;
+    height: auto;
+
+}
+
+#results .item-container img {
+    max-width: 100%;
+    height: auto;
+  }
 
 /* section */
 .intro{
